@@ -192,31 +192,31 @@ c       call first(mix,pj,m1)
        h(i,j)=h(j,i)
  200   continue
        endif
-   	   errout=10
-	open(errout,file='onehess.err')
-		write(errout,*) (kerncat)
-		write(errout,*) (kernpar)
-		write(errout,*) (zweig)
-   		write(errout,*) (trees)
-		write(errout,*) (indi)		
-		write(errout,*) (A(i,1,1),i=1,kerncat)
-		write(errout,*) (B(i,1,1),i=1,kerncat)
-		write(errout,*) (branch(i),i=1,kerncat)
-		write(errout,*) (C(i,1),i=1,kerncat)
-		write(errout,*) (iDaten(1,i),i=1,kerncat)
-		write(errout,*) (noc(i),i=1,kernpar)
-		write(errout,*) (x(i),i=1,kernpar)
-		write(errout,*) (hess(1,i),i=1,kernpar+1)
-	    write(errout,*) (hess(2,i),i=1,kernpar+1)
-	    write(errout,*) (ifail)
-	    write(errout,*) (ntotal)
-	    write(errout,*) (n)
-	    write(errout,*) (catno)
+c   	   errout=10
+c	open(errout,file='onehess.err')
+c		write(errout,*) (kerncat)
+c		write(errout,*) (kernpar)
+c		write(errout,*) (zweig)
+c   		write(errout,*) (trees)
+c		write(errout,*) (indi)		
+c		write(errout,*) (A(i,1,1),i=1,kerncat)
+c		write(errout,*) (B(i,1,1),i=1,kerncat)
+c		write(errout,*) (branch(i),i=1,kerncat)
+c		write(errout,*) (C(i,1),i=1,kerncat)
+c		write(errout,*) (iDaten(1,i),i=1,kerncat)
+c		write(errout,*) (noc(i),i=1,kernpar)
+c		write(errout,*) (x(i),i=1,kernpar)
+c		write(errout,*) (hess(1,i),i=1,kernpar+1)
+c	    write(errout,*) (hess(2,i),i=1,kernpar+1)
+c	    write(errout,*) (ifail)
+c	    write(errout,*) (ntotal)
+c	    write(errout,*) (n)
+c	    write(errout,*) (catno)
 c	   write(errout,*) (npers)
-	   write(errout,*) (eparno)
-	   write(errout,*) (h(1,i),i=1,kernpar+1)
-	   write(errout,*) (h(2,i),i=1,kernpar+1)
-	   close(10)
+c	   write(errout,*) (eparno)
+c	   write(errout,*) (h(1,i),i=1,kernpar+1)
+c	   write(errout,*) (h(2,i),i=1,kernpar+1)
+c	   close(10)
        end subroutine class1fi
 c
 c
